# XoOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  kernel.ld
core/: Cargo.toml
libs/allocator/: Cargo.toml
libs/allocator/src/: lib.rs  prelude.rs  slab.rs
libs/allocator/src/buddy/: mod.rs
libs/allocator/src/buddy/single/: mod.rs
libs/allocator/src/slab/: mod.rs
libs/basics/: Cargo.toml
libs/basics/src/: boot_info.rs  fmt.rs  ioports.rs  lib.rs  pit.rs  prelude.rs  serial.rs  test_lib.rs  test_lib_macro.rs  utility.rs  utility_macro.rs
libs/basics/src/interrupts/: mod.rs  pic.rs
libs/basics/src/interrupts/idt/: idt_ptr.rs  item.rs  mod.rs
libs/basics/src/mem/: general_allocator.rs  inplace_list.rs  memory_map.rs  mod.rs  paging.rs
libs/basics/src/mem/buddy/: mod.rs
libs/basics/src/mem/buddy/single/: entry.rs  mod.rs
libs/basics/src/mem/slab/: mod.rs
libs/basics/src/sync/: generic_mutex.rs  lock_guard.rs  mod.rs  spinlock.rs  ticket_lock.rs
libs/basics/src/sync/not_owning/: mod.rs  spinlock.rs
src/: boot_info.rs  error_handling.rs  fmod.rs  fmt.rs  ioport.rs  ioports.rs  lib.rs  macro_utility.rs  memory_map.rs  paging.rs  pit.rs  prelude.rs  serial.rs  tests.rs  tests_macro.rs  utility.rs  utility_macro.rs  vga.rs
src/asm/: bootstrap.S  interrupts.h  switch_thread_context.S
src/boot_info/: mod.rs
src/interrupts/: idt.rs  masking.rs  mod.rs  pic.rs
src/interrupts/idt/: item.rs  mod.rs
src/libs/bump_allocator/: Cargo.toml
src/mem/: general_allocator.rs  inplace_list.rs  list.rs  memory_map.rs  mod.rs  paging.rs
src/mem/buddy/: mod.rs
src/mem/buddy/single/: entry.rs  list.rs  mod.rs
src/mem/slab/: mod.rs  small.rs
src/memory_map/: mod.rs
src/serial/: fmt.rs  mod.rs
src/serial/fmt/: hex.rs  mod.rs  octal.rs  print.rs
src/serial/fmt/with_macro/: hex.rs  macros.rs  mod.rs  octal.rs  print.rs
src/thread/: int_guard.rs  int_mutex.rs  mod.rs  pit.rs  scheduler.rs  thread_handle.rs  thread_impl.rs  thread_repr.rs
src/threads/: mod.rs
