[package]
name = "xo_os"
version = "0.1.0"
authors = ["Andrey Tonkikh <xosmig@gmail.com>"]

[dependencies]
rlibc = "1.0.0" # memcpy, memset, etc. Required for libc.


[dependencies.allocator]
path = "libs/allocator"
[dependencies.basics]
path = "libs/basics"


[lib]
crate-type = ["staticlib"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort" # Disable unwinding for debug build.

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort" # Disable unwinding for release build.

[workspace]
